fix overlap/breaking text too early on polls with/without media

--- a/source/_patterns/20-molecules/poll/poll.scss
+++ b/source/_patterns/20-molecules/poll/poll.scss
@@ -291,16 +291,16 @@
 .poll-option-rating__answer-copy {
   position: absolute;
   top: 50%;
-  width: calc(100% - 130px); // prevent overlapping of text over the result in %
+  width: calc(100% - 85px); // prevent overlapping of text over the result in %
   font: 16px/20px $font-regular;
   letter-spacing: .5px;
   margin: 0;
   padding: 16px;
   transform: translate(0, -50%);
+}
 
-  @include tablet-up {
-    width: calc(100% - 150px);
-  }
+.article-media + .poll-option-rating .poll-option-rating__answer-copy {
+  width: calc(100% - 150px);
 }
 
 .poll-option-rating__percent {
